--- a/portfolio.html
+++ b/portfolio.html
@@ -1,247 +1,265 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./css/styles.css?temp=1" />
-		<link rel="shortcut icon" href="./images/favicon.ico" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css?temp=1" />
+    <link rel="shortcut icon" href="./images/favicon.ico" />
 
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
-			rel="stylesheet"
-		/>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
 
-		<title>Web Studio</title>
-	</head>
-	<body>
-		<header>
-			<div class="logo-and-navigation">
-				<div class="logo">
-					<a href="index.html" title="to home"><span>Web</span>Studio</a>
-				</div>
-				<nav>
-					<ul>
-						<li><a href="studio.html">Studio</a></li>
-						<li><a href="portfolio.html" class="active">Portfolio</a></li>
-						<li><a href="contacts.html">Contacts</a></li>
-					</ul>
-				</nav>
-			</div>
-			<ul class="contacts">
-				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-			</ul>
-		</header>
+    <title>Web Studio</title>
+  </head>
+  <body>
+    <header>
+      <div class="logo-and-navigation">
+        <div class="logo">
+          <a href="index.html" title="to home"><span>Web</span>Studio</a>
+        </div>
+        <nav>
+          <ul class="navigation">
+            <li><a class="navigation-item" href="studio.html">Studio</a></li>
+            <li>
+              <a class="navigation-item" href="portfolio.html">Portfolio</a>
+            </li>
+            <li>
+              <a class="navigation-item" href="contacts.html">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <ul class="contacts">
+        <li>
+          <a class="contact-link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="contact-link" href="tel:+110001111111"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
+      </ul>
+    </header>
 
-		<main>
-			<h1 hidden>Portfolio</h1>
-			<div class="filter-buttons">
-				<ul>
-					<li>
-						<button
-							type="button"
-							data-filter="all"
-							class="filter-button active"
-						>
-							All
-						</button>
-					</li>
-					<li>
-						<button data-filter="website" class="filter-button">
-							Web Site
-						</button>
-					</li>
-					<li><button data-filter="app" class="filter-button">App</button></li>
-					<li>
-						<button data-filter="design" class="filter-button">Design</button>
-					</li>
-					<li>
-						<button data-filter="marketing" class="filter-button">
-							Marketing
-						</button>
-					</li>
-				</ul>
-			</div>
+    <main>
+      <h1 hidden>Portfolio</h1>
+      <div class="filter-buttons">
+        <ul class="filter-buttons-list">
+          <li class="filter-buttons-item">
+            <button
+              type="button"
+              class="filter-button active"
+              data-filter="all"
+            >
+              All
+            </button>
+          </li>
+          <li class="filter-buttons-item">
+            <button class="filter-button" data-filter="website">
+              Web Site
+            </button>
+          </li>
+          <li class="filter-buttons-item">
+            <button class="filter-button" data-filter="app">App</button>
+          </li>
+          <li>
+            <button class="filter-button" data-filter="design">Design</button>
+          </li>
+          <li class="filter-buttons-item">
+            <button class="filter-button" data-filter="marketing">
+              Marketing
+            </button>
+          </li>
+        </ul>
+      </div>
 
-			<section class="project-cards block-centered">
-				<ul>
-					<li class="card" data-filter="app">
-						<a class="inner">
-							<div class="wrapper">
-								<img
-									class="front"
-									src="images/card-1.jpg"
-									alt="App screenshots"
-								/>
-								<p class="back">
-									14 Stylish and User-Friendly App Design Concepts · Task
-									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-									· Cloud Storage App
-								</p>
-							</div>
-							<h2 class="title">Banking App Interface Concept</h2>
-							<p class="type">App</p>
-						</a>
-					</li>
-					<li class="card" data-filter="marketing">
-						<a class="inner">
-							<div class="wrapper fliped">
-								<img class="front" src="images/card-2.jpg" alt="Marketing" />
-								<p class="back">
-									14 Stylish and User-Friendly App Design Concepts · Task
-									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-									· Cloud Storage App
-								</p>
-							</div>
-							<h2 class="title">Cashless Payment</h2>
-							<p class="type">Marketing</p>
-						</a>
-					</li>
-					<li class="card" data-filter="app">
-						<a class="inner">
-							<div class="wrapper">
-								<img
-									class="front"
-									src="images/card-3.jpg"
-									alt="Laptop and smartphone"
-								/>
-								<p class="back">
-									14 Stylish and User-Friendly App Design Concepts · Task
-									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-									· Cloud Storage App
-								</p>
-							</div>
-							<h2 class="title">Meditation App</h2>
-							<p class="type">App</p>
-						</a>
-					</li>
-					<li class="card" data-filter="marketing">
-						<a class="inner">
-							<div class="wrapper">
-								<img
-									class="front"
-									src="images/card-4.jpg"
-									alt="Human driving in a car"
-								/>
-								<p class="back">
-									14 Stylish and User-Friendly App Design Concepts · Task
-									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-									· Cloud Storage App
-								</p>
-							</div>
-							<h2 class="title">Taxi Service</h2>
-							<p class="type">Marketing</p>
-						</a>
-					</li>
-					<li class="card" data-filter="design">
-						<a class="inner">
-							<div class="wrapper">
-								<img
-									class="front"
-									src="images/card-5.jpg"
-									alt="Smartphone with app screenshots"
-								/>
-								<p class="back">
-									14 Stylish and User-Friendly App Design Concepts · Task
-									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-									· Cloud Storage App
-								</p>
-							</div>
-							<h2 class="title">Screen Illustrations</h2>
-							<p class="type">Design</p>
-						</a>
-					</li>
-					<li class="card" data-filter="marketing">
-						<a class="inner">
-							<div class="wrapper">
-								<img
-									class="front"
-									src="images/card-6.jpg"
-									alt="Women with smartphone in a hand"
-								/>
-								<p class="back">
-									14 Stylish and User-Friendly App Design Concepts · Task
-									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-									· Cloud Storage App
-								</p>
-							</div>
-							<h2 class="title">Online Courses</h2>
-							<p class="type">Marketing</p>
-						</a>
-					</li>
-					<li class="card" data-filter="design">
-						<a class="inner">
-							<div class="wrapper">
-								<img
-									class="front"
-									src="images/card-7.jpg"
-									alt="App screen design"
-								/>
-								<p class="back">
-									14 Stylish and User-Friendly App Design Concepts · Task
-									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-									· Cloud Storage App
-								</p>
-							</div>
-							<h2 class="title">Instagram Stories Concept</h2>
-							<p class="type">Design</p>
-						</a>
-					</li>
-					<li class="card" data-filter="website">
-						<a class="inner">
-							<div class="wrapper">
-								<img
-									class="front"
-									src="images/card-8.jpg"
-									alt="Human walking with organic food in a bag"
-								/>
-								<p class="back">
-									14 Stylish and User-Friendly App Design Concepts · Task
-									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-									· Cloud Storage App
-								</p>
-							</div>
-							<h2 class="title">Organic Food</h2>
-							<p class="type">Web Site</p>
-						</a>
-					</li>
-					<li class="card" data-filter="website">
-						<a class="inner">
-							<div class="wrapper">
-								<img
-									class="front"
-									src="images/card-9.jpg"
-									alt="Human makes coffe"
-								/>
-								<p class="back">
-									14 Stylish and User-Friendly App Design Concepts · Task
-									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-									· Cloud Storage App
-								</p>
-							</div>
-							<h2 class="title">Fresh Coffee</h2>
-							<p class="type">Web Site</p>
-						</a>
-					</li>
-				</ul>
-			</section>
-		</main>
+      <section class="project-cards block-centered">
+        <ul class="project-cards-list">
+          <li class="project-cards-item" data-filter="app">
+            <a class="project-cards-inner">
+              <div class="project-cards-top">
+                <img
+                  class="project-cards-front"
+                  src="./images/card-1.jpg"
+                  alt="App screenshots"
+                />
+                <p class="project-cards-back">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <h2 class="project-cards-title">Banking App Interface Concept</h2>
+              <p class="project-cards-type">App</p>
+            </a>
+          </li>
+          <li class="project-cards-item" data-filter="marketing">
+            <a class="project-cards-inner">
+              <div class="project-cards-top fliped">
+                <img
+                  class="project-cards-front"
+                  src="./images/card-2.jpg"
+                  alt="Marketing"
+                />
+                <p class="project-cards-back">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <h2 class="project-cards-title">Cashless Payment</h2>
+              <p class="project-cards-type">Marketing</p>
+            </a>
+          </li>
+          <li class="project-cards-item" data-filter="app">
+            <a class="project-cards-inner">
+              <div class="project-cards-top">
+                <img
+                  class="project-cards-front"
+                  src="./images/card-3.jpg"
+                  alt="Laptop and smartphone"
+                />
+                <p class="project-cards-back">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <h2 class="project-cards-title">Meditation App</h2>
+              <p class="project-cards-type">App</p>
+            </a>
+          </li>
+          <li class="project-cards-item" data-filter="marketing">
+            <a class="project-cards-inner">
+              <div class="project-cards-top">
+                <img
+                  class="project-cards-front"
+                  src="./images/card-4.jpg"
+                  alt="Human driving in a car"
+                />
+                <p class="project-cards-back">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <h2 class="project-cards-title">Taxi Service</h2>
+              <p class="project-cards-type">Marketing</p>
+            </a>
+          </li>
+          <li class="project-cards-item" data-filter="design">
+            <a class="project-cards-inner">
+              <div class="project-cards-top">
+                <img
+                  class="project-cards-front"
+                  src="./images/card-5.jpg"
+                  alt="Smartphone with app screenshots"
+                />
+                <p class="project-cards-back">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <h2 class="project-cards-title">Screen Illustrations</h2>
+              <p class="project-cards-type">Design</p>
+            </a>
+          </li>
+          <li class="project-cards-item" data-filter="marketing">
+            <a class="project-cards-inner">
+              <div class="project-cards-top">
+                <img
+                  class="project-cards-front"
+                  src="./images/card-6.jpg"
+                  alt="Women with smartphone in a hand"
+                />
+                <p class="project-cards-back">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <h2 class="project-cards-title">Online Courses</h2>
+              <p class="project-cards-type">Marketing</p>
+            </a>
+          </li>
+          <li class="project-cards-item" data-filter="design">
+            <a class="project-cards-inner">
+              <div class="project-cards-top">
+                <img
+                  class="project-cards-front"
+                  src="./images/card-7.jpg"
+                  alt="App screen design"
+                />
+                <p class="project-cards-back">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <h2 class="project-cards-title">Instagram Stories Concept</h2>
+              <p class="project-cards-type">Design</p>
+            </a>
+          </li>
+          <li class="project-cards-item" data-filter="website">
+            <a class="project-cards-inner">
+              <div class="project-cards-top">
+                <img
+                  class="project-cards-front"
+                  src="./images/card-8.jpg"
+                  alt="Human walking with organic food in a bag"
+                />
+                <p class="project-cards-back">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <h2 class="project-cards-title">Organic Food</h2>
+              <p class="project-cards-type">Web Site</p>
+            </a>
+          </li>
+          <li class="project-cards-item" data-filter="website">
+            <a class="project-cards-inner">
+              <div class="project-cards-top">
+                <img
+                  class="project-cards-front"
+                  src="./images/card-9.jpg"
+                  alt="Human makes coffe"
+                />
+                <p class="project-cards-back">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <h2 class="project-cards-title">Fresh Coffee</h2>
+              <p class="project-cards-type">Web Site</p>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
 
-		<footer>
-			<div class="block-centered">
-				<div class="logo">
-					<a href="/" title="to home"><span>Web</span>Studio</a>
-				</div>
-				<p class="text">
-					Increase the flow of customers and sales for your business with
-					digital marketing & growth solutions.
-				</p>
-			</div>
-		</footer>
+    <footer>
+      <div class="block-centered">
+        <div class="logo">
+          <a href="/" title="to home"><span>Web</span>Studio</a>
+        </div>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
+    </footer>
 
-		<script src="js/main.js"></script>
-	</body>
+    <script src="./js/main.js"></script>
+  </body>
 </html>
