--- a/studio.html
+++ b/studio.html
@@ -1,162 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./css/styles.css?temp=1" />
-		<link rel="shortcut icon" href="./images/favicon.ico" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css?temp=1" />
+    <link rel="shortcut icon" href="./images/favicon.ico" />
 
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
-			rel="stylesheet"
-		/>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
 
-		<title>Web Studio</title>
-	</head>
-	<body>
-		<header>
-			<div class="logo-and-navigation">
-				<div class="logo">
-					<a href="index.html" title="to home"><span>Web</span>Studio</a>
-				</div>
-				<nav>
-					<ul>
-						<li><a href="studio.html" class="active">Studio</a></li>
-						<li><a href="portfolio.html">Portfolio</a></li>
-						<li><a href="contacts.html">Contacts</a></li>
-					</ul>
-				</nav>
-			</div>
-			<ul class="contacts">
-				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-			</ul>
-		</header>
+    <title>Web Studio</title>
+  </head>
+  <body>
+    <header>
+      <div class="logo-and-navigation">
+        <div class="logo">
+          <a href="index.html" title="to home"><span>Web</span>Studio</a>
+        </div>
+        <nav>
+          <ul class="navigation">
+            <li><a class="navigation-item" href="studio.html">Studio</a></li>
+            <li>
+              <a class="navigation-item" href="portfolio.html">Portfolio</a>
+            </li>
+            <li>
+              <a class="navigation-item" href="contacts.html">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <ul class="contacts">
+        <li>
+          <a class="contact-link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="contact-link" href="tel:+110001111111"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
+      </ul>
+    </header>
 
-		<main>
-			<section class="top-block">
-				<h1>Studio</h1>
-				<button type="button">Order Service</button>
-			</section>
+    <main>
+      <section class="top-block">
+        <h1>Studio</h1>
+        <button class="top-block-order-button" type="button">
+          Order Service
+        </button>
+      </section>
+    </main>
 
-			<section class="block-centered features">
-				<ul>
-					<li>
-						<h3>Strategy</h3>
-						<p>
-							Our goal is to identify the business problem to walk away with the
-							perfect and creative solution.
-						</p>
-					</li>
-					<li>
-						<h3>Punctuality</h3>
-						<p>
-							Bring the key message to the brand's audience for the best price
-							within the shortest possible time.
-						</p>
-					</li>
-					<li>
-						<h3>Diligence</h3>
-						<p>
-							Research and confirm brands that present the strongest digital
-							growth opportunities and minimize risk.
-						</p>
-					</li>
-					<li>
-						<h3>Technologies</h3>
-						<p>
-							Design practice focused on digital experiences. We bring forth a
-							deep passion for problem-solving.
-						</p>
-					</li>
-				</ul>
-			</section>
-
-			<!-- What are we doing -->
-			<section class="block-centered what-are-we-doing">
-				<h2>What are we doing</h2>
-
-				<ul>
-					<li>
-						<img
-							width="370"
-							src="images/what-are-we-doing-1.jpg"
-							alt="website statistics"
-						/>
-					</li>
-					<li>
-						<img
-							width="370"
-							src="images/what-are-we-doing-2.jpg"
-							alt="wahtsapp on smartphone, user interface"
-						/>
-					</li>
-					<li>
-						<img
-							width="370"
-							src="images/what-are-we-doing-3.jpg"
-							alt="human holding smartphone in a hand"
-						/>
-					</li>
-				</ul>
-			</section>
-
-			<!-- Our team -->
-			<section class="our-team">
-				<div class="block-centered">
-					<h2>Our Team</h2>
-
-					<ul class="our-team">
-						<li>
-							<img
-								width="270"
-								src="images/team-1.jpg"
-								alt="Фото Mark Guerrero"
-							/>
-							<p class="name">Mark Guerrero</p>
-							<div class="position">Product Designer</div>
-						</li>
-						<li>
-							<img width="270" src="images/team-2.jpg" alt="Фото Tom Ford" />
-							<p class="name">Tom Ford</p>
-							<div class="position">Frontend Developer</div>
-						</li>
-						<li>
-							<img
-								width="270"
-								src="images/team-3.jpg"
-								alt="Фото Camila Garcia"
-							/>
-							<p class="name">Camila Garcia</p>
-							<div class="position">Marketing</div>
-						</li>
-						<li>
-							<img
-								width="270"
-								src="images/team-4.jpg"
-								alt="Фото Daniel Wilson"
-							/>
-							<p class="name">Daniel Wilson</p>
-							<div class="position">UI Designer</div>
-						</li>
-					</ul>
-				</div>
-			</section>
-		</main>
-
-		<footer>
-			<section class="block-centered">
-				<div class="logo">
-					<a href="/" title="to home"><span>Web</span>Studio</a>
-				</div>
-				<p class="text">
-					Increase the flow of customers and sales for your business with
-					digital marketing & growth solutions.
-				</p>
-			</section>
-		</footer>
-	</body>
+    <footer>
+      <div class="block-centered">
+        <div class="logo">
+          <a href="/" title="to home"><span>Web</span>Studio</a>
+        </div>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
